<resources>
    <string name="app_name">Расписание репетитора</string>


    <!--common Strings -->
    <string name="common_btn_cancel_gray_background">Отмена</string>
    <string name="common_btn_save_blue_background">Сохранить</string>
    <string name="common_delete_user">Удалить ученика</string>
    <string name="common_delete_lesson">Удалить урок</string>
    <string name="common_delete">Удалить</string>
    <string name="common_tv_name">Имя</string>
    <string name="common_grade">Класс</string>
    <string name="common_grade_lowercase">класс</string>
    <string name="common_snack_bar_user_delete">Ученик удален</string>
    <string name="common_snack_bar_user_added">Ученик добавлен</string>
    <string name="common_snack_bar_lesson_delete">Урок удален</string>
    <string name="common_lesson">Урок</string>
    <string name="common_hint_tv_topic">Тема урока</string>

    <!--Strings for AddUserFragment-->
    <string name="add_user_fragment_btn_back">Новый ученик</string>
    <string name="add_user_fragment_upload_photo">Загрузить изображение</string>
    <string name="add_user_fragment_telephone_hint">+380123456789</string>

    <!--Strings for ListUserFragment-->
    <string name="list_user_fragment_btn_back">Ученики</string>
    <string name="list_user_fragment_btn_home_icon">Главная</string>
    <string name="list_user_fragment_btn_users_icon">Ученики</string>
    <string name="list_user_fragment_btn_add_user_text">Добавить</string>
    <string name="list_user_fragment_btn_message_icon">Чаты</string>
    <string name="list_user_fragment_btn_profile_icon">Профиль</string>
    <string name="list_user_fragment_search_hint">Найти</string>

    <!--Strings for UpdateUserFragment-->
    <string name="update_user_fragment_btn_back">Редактировать профиль</string>
    <string name="update_user_fragment_mobile_hint">Мобильный телефон</string>
    <string name="update_user_fragment_telegram_hint">Telegram Номер/ID</string>
    <string name="update_user_fragment_mom_or_dad_hint">Мама/папа</string>
    <string name="update_user_fragment_mom_or_dad_name_hint">Имя родителя</string>
    <string name="update_user_fragment_data_changed_toast">Данные изменены!</string>
    <string name="update_user_fragment_fill_all_data_toast">Заполните все данные</string>

    <!--Strings for UserFullInformationFragment-->
    <string name="user_full_information_fragment_btn_back">Ученик</string>
    <string name="user_full_information_fragment_btn_edit">Редактировать</string>
    <string name="user_full_information_fragment_btn_telegram_write_message">Написать в Telegram</string>
    <string name="user_full_information_fragment_btn_make_lesson">Назначить занятие</string>
    <string name="user_full_information_fragment_add_name_toast">Добавьте имя пользователя из Telegram</string>
    <string name="user_full_information_fragment_add_tel_number">Введите телефон</string>
    <string name="user_full_information_fragment_list_if_lesson">Список занятий</string>

    <!--Strings for LessonFullInformationFragment-->

    <string name="user_lesson_information_fragment_hint_no_task">Нету домашнего задания</string>

    <!--Strings for AddLessonFragment-->
    <string name="add_lesson_fragment_tv_at">в</string>
    <string name="add_lesson_fragment_tv_day_of_week">EEEE</string>
    <string name="add_lesson_fragment_tv_day_month_year">dd.MM.yyyy</string>
    <string name="add_lesson_fragment_tv_time">HH:mm</string>
    <string name="add_lesson_fragment_tv_formatter">%1$s, %2$s %3$s %4$s</string>
    <string name="add_lesson_fragment_tv_name_grade_hint">Имя ученика и класс</string>
    <string name="add_lesson_fragment_tv_date">Выбрать дату</string>
    <string name="add_lesson_fragment_toast_select_date">Выбирите дату</string>

    <!--Strings for ListLessonFragment-->
    <string name="list_lesson_fragment_btn_back">Уроки</string>

    <!--Strings for UpdateLessonFragment-->
    <string name="update_lesson_fragment_lesson_updated">Урок изменен</string>
    <string name="update_lesson_fragment_lesson_hint_no_task">Нету домашнего задания</string>

    <!--Strings for DeleteUserAlertDialogs-->
    <string name="delete_user_alert_dialog_tv_delete_message_text">Вы точно хотите удалить этого ученика?</string>

    <!--Strings for DeleteLessonAlertDialogs-->
    <string name="delete_lesson_alert_dialog_tv_delete_message_text">Вы точно хотите удалить этот урок?</string>
</resources>