<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/common_lesson"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_chevron_left" />

    <TextView
        android:id="@+id/btnEditLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/accentBlue"
        android:textSize="14sp"
        android:layout_marginEnd="20dp"
        android:text="@string/user_full_information_fragment_btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnBack" />


    <TextView
        android:id="@+id/tvHomeTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/user_lesson_information_fragment_hint_no_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        style="@style/whiteTextView18sp"/>


    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvHomeTask"
        app:layout_constraintEnd_toEndOf="@id/tvHomeTask"
        app:layout_constraintTop_toBottomOf="@id/tvHomeTask"
        android:layout_marginTop="24dp"
        android:hint="@string/common_hint_tv_topic"
        style="@style/whiteTextView18sp"/>


    <TextView
        android:id="@+id/btnDeleteLesson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvHomeTask"
        app:layout_constraintEnd_toEndOf="@id/tvHomeTask"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:text="@string/common_delete_lesson"
        style="@style/redTextView18sp"/>

    <ImageView
        android:id="@+id/ivDeleteUser"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@id/btnDeleteLesson"
        app:layout_constraintBottom_toBottomOf="@id/btnDeleteLesson"
        app:layout_constraintEnd_toEndOf="@id/btnDeleteLesson"
        android:src="@drawable/ic_trash"/>
</androidx.constraintlayout.widget.ConstraintLayout>