<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:padding="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/common_tv_name"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_chevron_left" />

    <TextView
        android:id="@+id/tvUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_lesson_fragment_tv_name_grade_hint"
        android:fontFamily="@font/gilroy_medium"
        style="@style/whiteTextView18sp"/>

    <TextView
        android:id="@+id/btnSelectLessonDateAndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserInfo"
        android:textSize="18sp"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_regular"
        android:hint="@string/add_lesson_fragment_tv_date"
        android:paddingStart="18dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingEnd="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <ImageView
        android:id="@+id/icCalendarClock"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toTopOf="@id/btnSelectLessonDateAndTime"
        app:layout_constraintBottom_toBottomOf="@id/btnSelectLessonDateAndTime"
        app:layout_constraintEnd_toEndOf="@id/btnSelectLessonDateAndTime"
        android:src="@drawable/ic_calendar_clock"/>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/tvUserInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        android:layout_marginBottom="136dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/common_btn_cancel_gray_background"
        style="@style/whiteTextView18sp"/>

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/tvUserInfo"
        android:background="@drawable/btn_ok_selector"
        android:enabled="false"
        android:layout_marginTop="12dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/common_btn_save_blue_background"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>