<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/c2c2c2c">


    <ImageView
        android:id="@+id/imgBack"
        android:background="@drawable/rv_item_bg_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvDeleteTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/imgBack"
        app:layout_constraintEnd_toEndOf="@id/imgBack"
        app:layout_constraintTop_toTopOf="@id/imgBack"
        android:gravity="top"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/common_delete_user"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/gilroy_medium"/>

    <TextView
        android:id="@+id/tvDeleteMessageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvDeleteTitleText"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteTitleText"
        android:layout_marginTop="24dp"
        android:text="@string/delete_user_alert_dialog_tv_delete_message_text"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_regular"/>


    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/common_btn_cancel_gray_background"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintStart_toStartOf="@id/tvDeleteTitleText"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteMessageText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        style="@style/alertTextView16sp"/>

    <TextView
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/tvDeleteTitleText"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        android:layout_marginTop="12dp"
        android:text="@string/common_delete"
        android:textColor="@color/red"
        style="@style/alertTextView16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>