<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/update_user_fragment_btn_back"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_chevron_left" />


    <EditText
        android:id="@+id/edtUpdateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rv_item_bg_2"
        android:fontFamily="@font/gilroy_medium"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtUpdateGrade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtUpdateName"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <EditText
        android:id="@+id/edtPhonePupilNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtUpdateGrade"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="phone"
        android:hint="@string/update_user_fragment_mobile_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <EditText
        android:id="@+id/edtTelegramNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtPhonePupilNumber"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/update_user_fragment_telegram_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <EditText
        android:id="@+id/edtMomOrDad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtTelegramNumber"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/update_user_fragment_mom_or_dad_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <EditText
        android:id="@+id/edtMomOrDadName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtMomOrDad"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="textCapSentences"
        android:hint="@string/update_user_fragment_mom_or_dad_name_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <EditText
        android:id="@+id/edtPhoneParentNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtMomOrDadName"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="phone"
        android:hint="@string/update_user_fragment_mobile_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <EditText
        android:id="@+id/edtTelegramParentNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        app:layout_constraintTop_toBottomOf="@id/edtPhoneParentNumber"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/update_user_fragment_telegram_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>


    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edtUpdateName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rv_item_bg_2"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/common_btn_cancel_gray_background"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/edtUpdateName"
        android:background="@drawable/btn_ok_bg"
        android:layout_marginTop="12dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/common_btn_save_blue_background"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_medium"/>



</androidx.constraintlayout.widget.ConstraintLayout>